# Sentipulse_Review_Takers_Forms

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  routes.py
app/static/inputform/: config.js  index.html  script.js  style.css
app/static/qrform/: index.html
scripts/: generate_qr.py
